--- a/report/report.tex
+++ b/report/report.tex
@@ -190,86 +190,50 @@ Stanford, CA 94305 \\
 Some abstract
 \end{abstract}
 
-\section{Introduction}
-Milestone report is seen in Section 2. For reader's reference, we give an introduction of our project in this section.
+
+\input{1introduction}
+
+\input{2related}
+
+\input{3problem}
+
+\input{4methods}
 
 
-In this project, we are going to explore different methods that utilize social network information in sentiment analysis with deep learning. Network structure is useful and informative in NLP-related task as people within each community may have their own ``jargon'' in expressing ideas and sentiments. 
+\input{5experiments}
 
 
-\subsection*{Data description}
-We obtained the data used by \cite{yang2017attention}. The data consists of a collection of tweets as well as some network information on Twitter. For each tweet sample, we have one tweet ID, one user ID, a sentiment label (positive, neutral, negative), and the tweet content itself. For example, the following are two examples of our data samples.
-\begin{verbatim}
-261140278944088066	17572408	negative	@USER may i have an industrial revolution ...
-237571817550786563	727519172	neutral	@USER i told you shane would get his 5th-star ...
-\end{verbatim}
-We have three networks, i.e., FOLLOWER, MENTION and RETWEET network which have been explained in details by
-\cite{yang2017attention}.
+\input{6discussion}
 
 
-
-
-
-\subsection*{Methodology}
-%Methodology/Algorithm: What method or algorithm are you proposing? If there are existing implementations, will you use them and how? How do you plan to improve or modify such implementations?
-
-Our project will start from the method proposed by \cite{yang2017attention}, which is summarized in Figure \ref{Fig:Flow} (black lines). The model consider the author information and sentence information separately: each node (author) in the network is assigned an embedding vector using the LINE algorithm (\cite{tang2015line}), and then is (softly) assigned each cluster on the network based on the embedding. Each cluster has its own model, which is a CNN model combined with max pool layer. This model provides a baseline in our project.
-
-\begin{figure}[htbp] %  figure placement: here, top, bottom, or page
-   \centering
-   \includegraphics[width=5.2in]{flow.jpg} 
-   \caption{General Methodology}
-   \label{Fig:Flow}
-\end{figure}
+\input{7reference}
 
 
 
-We are going to extend this model in three aspects, as is illustrated in the red lines in Figure \ref{Fig:Flow}. To be specific, 
-\begin{enumerate}   [(1)]
-%\setcounter{enumi}{3}
-\item Using other node embedding methods in network analysis, such as \textit{DeepWalk} (\cite{perozzi2014deepwalk}) and \textit{node2vec} (\cite{grover2016node2vec});
-\item Explore other methods to combine author information and sentence information, especially the bilinear form $a^T W h$ which measures the interaction between author and sentence. Here $a$ is the author embedding and $h$ is the sentence embedding.
-\item Explore other models in sentiment analysis, such as RNN, GRU, and LSTM.
-\end{enumerate}
-
-\section{Progress}
-As is advised by our project mentor Will Hamilton, since CNN is the current state-of-the-art model for sentiment analysis, we are going to focus on (1) and (2) above, and only work on part (3) if time permits. 
-
-For part (1), we have already computed the embedding using \textit{DeepWalk}. Using the original model and implementation, this embedding does not outperform the existing result which uses the LINE embedding. We have just finished the embedding using \textit{node2vec}, and have not examined it with the existing result.
-We intended to computed the embedding using Azure, but we experienced some issue in uploading our network edgelist files. We end up using CORN, which takes roughly 50 hours to finish.
-
-
-For part (2), the original implementation uses Keras. We have just read through and understand all of their code, which can be finished in 10 minutes using personal computer CPU. 
-We are contacting the authors for exact seeds to reproduce the results in the paper, and after that we are going to incorporate the author-sentence interaction feature into the existing model. 
-
-%All our code (the baseline model) in hand can be implemented and finished in ten minutes using personal computer CPU, so we haven't implemented them on
-
-
-\section{Results}
-
-\begin{table}[htbp]
-\begin{center}
-\begin{tabular}{|c|c|c c c c|}
-\hline
-Embedding method & CNN & DeepWalk & LINE & node2vec & random\\
-\hline
-Dev2013  & 68.85 & 67.71 & \textbf{69.51} & 68.58 & 68.50 \\
-\hline
-Test2013  & 69.53 & 67.58 & \textbf{69.67} & 68.58 & 68.49 \\
-Test2014  & \textbf{72.41} & 71.46 & 71.44 & 71.46 & 71.69 \\
-Test2015  & 64.40 & \textbf{64.71} & 64.57 & 64.25 & 63.50 \\
-\hline
-Avg test sets & \textbf{68.78}& 67.92 & 68.56  & 68.10 & 67.89 \\
-\hline
-\end{tabular}
-\end{center}
-\caption{Prediction performance on each Dev and Test Sets. }
-\label{Tb:}
-\end{table}%
 
 
 
-\bibliographystyle{ormsv080} 
-\bibliography{Bibli}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%\bibliographystyle{ormsv080} 
+%\bibliography{Bibli}
 
 \end{document}
