--- a/report/7reference.tex
+++ b/report/7reference.tex
@@ -1,3 +1,18 @@
 %!TEX root = report.tex
 
 \section*{Reference}
+\small
+
+[1] Yang, Yi, and Jacob Eisenstein. "Overcoming Language Variation in Sentiment Analysis with Social Attention." arXiv preprint  arXiv:1511.06052 (2016).
+
+[2] Perozzi, Bryan, Rami Al-Rfou, and Steven Skiena. "Deepwalk: Online learning of social representations." Proceedings of the 20th ACM SIGKDD international conference on Knowledge discovery and data mining. ACM, 2014.
+
+[3] Tang, Jian, et al. "Line: Large-scale information network embedding." Proceedings of the 24th International Conference on World Wide Web. ACM, 2015.
+
+[4] Grover, Aditya, and Jure Leskovec. "node2vec: Scalable feature learning for networks." Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining. ACM, 2016.
+
+[5] Tan, Chenhao, et al. "User-level sentiment analysis incorporating social networks." Proceedings of the 17th ACM SIGKDD international conference on Knowledge discovery and data mining. ACM, 2011.
+
+[6] Yang, Yi, and Ming-Wei Chang. "S-mart: Novel tree-based structured learning algorithms applied to tweet entity linking." arXiv preprint arXiv:1609.08075 (2016).
+
+[7] Yang, Yi, Ming-Wei Chang, and Jacob Eisenstein. "Toward socially-infused information extraction: Embedding authors, mentions, and entities." arXiv preprint arXiv:1609.08084 (2016).
