--- a/report/7reference.tex
+++ b/report/7reference.tex
@@ -16,3 +16,11 @@
 [6] Yang, Yi, and Ming-Wei Chang. "S-mart: Novel tree-based structured learning algorithms applied to tweet entity linking." arXiv preprint arXiv:1609.08075 (2016).
 
 [7] Yang, Yi, Ming-Wei Chang, and Jacob Eisenstein. "Toward socially-infused information extraction: Embedding authors, mentions, and entities." arXiv preprint arXiv:1609.08084 (2016).
+
+[8] Pang, Bo, and Lillian Lee. "Opinion mining and sentiment analysis." Foundations and Trends® in Information Retrieval 2.1–2 (2008): 1-135.
+
+[9] Kim, Yoon. "Convolutional neural networks for sentence classification." arXiv preprint arXiv:1408.5882 (2014).
+
+[10] Dos Santos, Cícero Nogueira, and Maira Gatti. "Deep Convolutional Neural Networks for Sentiment Analysis of Short Texts." COLING. 2014.
+
+[11] Severyn, Aliaksei, and Alessandro Moschitti. "Twitter sentiment analysis with deep convolutional neural networks." Proceedings of the 38th International ACM SIGIR Conference on Research and Development in Information Retrieval. ACM, 2015.
