--- a/report/4methods.tex
+++ b/report/4methods.tex
@@ -1,6 +1,7 @@
 %!TEX root = report.tex
 
 \section{Methodology}
+\label{Sec:methodology}
 
 %Methodology/Algorithm: What method or algorithm are you proposing? If there are existing implementations, will you use them and how? How do you plan to improve or modify such implementations?
 
