--- a/report/3problem.tex
+++ b/report/3problem.tex
@@ -1,6 +1,9 @@
 %!TEX root = report.tex
 
 \section{Problem Definition and Data Description}
+\label{Sec:ProblemData}
+
+
 We obtained the data used by \cite{yang2017attention}. The data consists of a collection of tweets as well as some network information on Twitter. For each tweet sample, we have one tweet ID, one user ID, a sentiment label (positive, neutral, negative), and the tweet content itself. For example, the following are two examples of our data samples.
 \begin{verbatim}
 261140278944088066	17572408	negative	@USER may i have an industrial revolution ...
