--- a/report/3problem.tex
+++ b/report/3problem.tex
@@ -6,8 +6,8 @@
 
 We obtained the data used by \cite{yang2017attention}. The data consists of a collection of tweets as well as some network information on Twitter. For each tweet sample, we have one tweet ID, one user ID, a sentiment label (positive, neutral, negative), and the tweet content itself. For example, the following are two examples of our data samples.
 \begin{verbatim}
-261140278944088066	17572408	negative	@USER may i have an industrial revolution ...
-237571817550786563	727519172	neutral	@USER i told you shane would get his 5th-star ...
+261140278944 17572 negative @USER may i have an industrial revolution...
+237571817550 72751 neutral @USER i told you shane would get his ...
 \end{verbatim}
 We have three networks, i.e., FOLLOWER, MENTION and RETWEET network which have been explained in details by
 \cite{yang2017attention}.
