--- a/report/6discussion.tex
+++ b/report/6discussion.tex
@@ -1,3 +1,9 @@
 %!TEX root = report.tex
 
 \section{Discussion}
+
+\begin{enumerate}
+	\item sample size too small. everything is random effect.
+	\item [1] result is not persuasive either. We believe their model improvement is due to ensemble effect. In fact, we have achieved better result for their different baselines.
+	\item 
+\end{enumerate}
