--- a/report/6discussion.tex
+++ b/report/6discussion.tex
@@ -2,8 +2,8 @@
 
 \section{Discussion}
 
-\begin{enumerate}
+\begin{itemize}
 	\item sample size too small. everything is random effect.
-	\item [1] result is not persuasive either. We believe their model improvement is due to ensemble effect. In fact, we have achieved better result for their different baselines.
-	\item 
-\end{enumerate}
+	\item Yang and Esteintin(2016)[1] result is not persuasive either. We believe their model improvement is due to ensemble effect. In fact, in our running of their code, their baseline models outperform their social attention model.
+	\item even if we get a frustrating result, a larger dataset might still make it work.
+\end{itemize}
